...
                                text = message,
                                color = if (
                                    message.startsWith("Готово") ||
                                    message.startsWith("Чтение") ||
                                    message.startsWith("Линейная") ||
                                    message.startsWith("Растяжка") ||
                                    message.startsWith("Подготовка")
                                ) {
                                    AstroColors.TextSecondary
                                } else {
                                    AstroColors.Error
                                },
                                style = MaterialTheme.typography.bodySmall
...
